--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#272727</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#254A9F</color>
     <color name="light_blue">#B9D7EA</color>
+    <color name="gray">#727272</color>
 </resources>
